tests/language_modules/05_records/invalid_semantics/missing_record_literal_field.vf
module MissingRecordLiteralField

type Account is record
    id: Integer
    active: Boolean
end record

procedure main()
is
    let account: Account = Account { id: 1 }
    check true
end main

end MissingRecordLiteralField